Delete lecturer thing in ICT-Club experience

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                 <div class="resume_section-content">
                                     <ul>
                                         <li class="resume_section-content_item">
-                                            <div class="resume_section-content_title">ICT-Club SMPN 2 Bandung (Lecturer)</div>
+                                            <div class="resume_section-content_title">ICT-Club SMPN 2 Bandung</div>
                                             <div class="muted">
                                                 <a class="" target="_blank" href="https://www.facebook.com/ict.smpn2bdg/">https://www.facebook.com/ict.smpn2bdg/</a>
                                                 <p>ICT-Club an extracurricular in SMP Negeri 2 Bandung for SMPN 2 Bandung students whose eyes in IT. It use a simple system I invented in Word and Excel from Microsoft Office for its daily reports.</p>
